# flash-code

./: .gitignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  ConfigContainer.tsx  EyeAnimation.tsx  ListItem.tsx  ListSection.tsx  MoveButtons.tsx  PrimaryActionButtons.tsx  logger.ts  mystyle.css  types.ts
src-tauri/: Cargo.toml  app.manifest  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config_manager.rs  discord_notifier.rs  icon_position.rs  image_comparison.rs  line_notifier.rs  main.rs  monitor.rs  screen_capture.rs  window_collection.rs  window_utils.rs
