[package]
name = "flash-code"
version = "0.1.0"
description = "A Tauri App"
authors = ["Toshiki Kawaguchi"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tauri = { version = "1.8.0", features = [
    "shell-open",
    "http-request",
    "dialog-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
base64 = "0.22.1"
image = "0.25.2"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
tokio = "1.40.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.22"
env_logger = "0.11.5"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Threading",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[profile.dev]
debug = true

[profile.release]
debug = true
